--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#img1{
+    width: 0%;
+}
+
+#img2{
+    width: 0%;
+}
+
+#img3{
+    width: 0%;
+}
